# HeartBeatMonitor

./: .gitignore  LICENSE  README.md  components.d.ts  electron-builder.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help_wanted.md
.github/workflows/: build.yml  ci.yml
electron/: electron-env.d.ts
electron/core/: band.ts
electron/main/: index.ts
electron/preload/: index.ts
src/: App.vue  main.ts  types.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/addons/brcat-widget-example/: brcat-manifest.json  index.html
src-tauri/addons/brcat-widget-example/assets/: index-2A3eVVw1.css  index-BJNjTJJX.js  index-dFsFi7XE.js
src-tauri/addons/example/: index.html
src-tauri/addons/example/assets/: index-B_fNrdtW.js  index-CQ0YjJDO.css
src-tauri/addons/widgets/example/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  widget.html  widget.js
src-tauri/addons/widgets/example/src/: App.vue  style.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/hbcat-widget-example/: hbcat-manifest.json  index.html
src-tauri/plugins/hbcat-widget-example/assets/: index-dFsFi7XE.js
src-tauri/src/: main.rs
src/assets/css/: MiSans.css  font.css  style.css
src/components/: DevOnly.vue  DrawerContainer.vue  Greet.vue  PageContainer.vue  ScanningDevice.vue  SignalIndicator.vue  WidgetListItem.vue
src/components/icons/: SvgSpinnersPulse2.vue  SvgSpinnersWifiFade.vue  SystemUiconsSignalFull.vue  SystemUiconsSignalLow.vue  SystemUiconsSignalMedium.vue  TablerActivityHeartbeat.vue  TablerBluetooth.vue  (+8 more)
src/composables/: useErrno.ts
src/pages/: charts.vue  hr-chart.vue  index.vue  plugin.vue  settings.vue  streaming-plugin.vue  streaming-plugins.vue  widgets.vue
src/store/: index.d.ts  index.ts
src/stores/: index.ts  plugin.ts
(+6 files in other folders)
