[package]
name = "heartbeat-cat"
version = "0.0.1"
description = "Catch your heartbeats"
authors = ["TimothyYin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.2.0", features = [] }

[dependencies]
tauri = { version = "^2.5.1", features = [ "tray-icon", "macos-private-api", "unstable"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = { version = "0.11.8", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
uuid = "1.10.0"
lazy_static = "1.5.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
